# tortoise-finder

./: .gitignore  01_data_intake.ipynb  02_tile_and_filter.ipynb  03_dinov2_embed_cache.ipynb  04_train_mil_head.ipynb  05_eval_threshold_export.ipynb  Dockerfile  fly.toml  requirements-demo.txt
a/: data.yaml
tortoise-finder/: .gitignore  Dockerfile  README.md  capture_cursor.js  capture_dom.json  capture_meta.json  demo_server.py  demo_server_backup.py  fly.toml  package.json  pyproject.toml  run_local.py  worker.py
tortoise-finder/api/: __init__.py  deps.py  main.py  schemas.py
tortoise-finder/app_ui/: __init__.py  ui.py
tortoise-finder/cli/: __init__.py  main.py
tortoise-finder/data/a/: README.dataset.txt  README.roboflow.txt
tortoise-finder/data/a/test/labels/: B002T-20200709-170123_jpg.rf.67e83a89af2e562452c19c8205c13077.txt  (+39 more)
tortoise-finder/data/outputs/positive/: test2.txt  test3.txt
tortoise-finder/docker/: api.Dockerfile  docker-compose.yml  ui.Dockerfile  worker.Dockerfile
tortoise-finder/models/: __init__.py  loader.py
tortoise-finder/pipeline/: __init__.py  export.py  infer.py  postproc.py  run.py  tiler.py  utils.py
tortoise-finder/scripts/: __init__.py  seed_fake_dataset.py  upload_model.py  upload_training_data.py
tortoise-finder/storage/: __init__.py  io.py  paths.py
tortoise-finder/tests/: __init__.py  test_api.py  test_pipeline.py
tortoise-finder/tools/: build_webmap.py  probe.mjs  write_random_gps_exif.py
tortoise-finder/training/: __init__.py  dataset.py
tortoise-finder/webmap/: index.html
(+620 files in other folders)
